--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,6 +1,31 @@
-<footer class="bg-white text-center border-top pt-2">
-  <div class="container">
-    <p>&copy; <%= new Date().getFullYear() %> Techno. All rights reserved.</p>
-    <p>Made By <a href="https://github.com/Ahmad-AlaaEdin">Ahmad</a></p>
-  </div>
-</footer>
+<footer class="bg-light py-4 mt-auto">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h5>About Us</h5>
+                <p>Your trusted e-commerce platform for quality products.</p>
+            </div>
+            <div class="col-md-4">
+                <h5>Quick Links</h5>
+                <ul class="list-unstyled">
+                    <li><a href="/about">About</a></li>
+                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="/terms">Terms & Conditions</a></li>
+                    <li><a href="/privacy">Privacy Policy</a></li>
+                </ul>
+            </div>
+            <div class="col-md-4">
+                <h5>Contact Info</h5>
+                <ul class="list-unstyled">
+                    <li>Email: info@ecommerce.com</li>
+                    <li>Phone: (123) 456-7890</li>
+                    <li>Address: 123 E-Commerce St</li>
+                </ul>
+            </div>
+        </div>
+        <hr>
+        <div class="text-center">
+            <p>&copy; <%= new Date().getFullYear() %> E-Commerce. All rights reserved.</p>
+        </div>
+    </div>
+</footer> 
