--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,83 +1,45 @@
-<nav class="navbar navbar-expand-lg bg-white border-bottom shadow-sm">
-  <div class="container">
-    <a class="navbar-brand fs-1  fw-bold text-dark" href="/">Techno</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse py-3" id="navbarSupportedContent">
-      <!-- Search Form -->
-
-      <form class="d-flex m-auto" role="search" action="/" method="GET">
-        <input
-          class="form-control me-2 border rounded-pill"
-          type="search"
-          name="query"
-          placeholder="Search products..."
-          aria-label="Search products"
-        />
-        <button class="btn btn-outline-dark rounded-pill" type="submit">
-          Search
-        </button>
-      </form>
-      <!-- Nav Items -->
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-center">
-        <!-- Cart Icon - Always shown -->
-        <li class="nav-item me-3">
-          <a class="nav-link position-relative" href="/cart">
-            <i class="bi bi-cart-fill fs-4"></i>
-            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger cart-count">
-              0
-            </span>
-          </a>
-        </li>
-        <% if (user) { %>
-          <!-- Checkout button and user dropdown -->
-          <li class="nav-item me-3">
-            <a class="btn btn-primary rounded-pill" href="/checkout">
-              <i class="bi bi-credit-card me-1"></i> Checkout
-            </a>
-          </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle text-dark"
-              href="#"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              <%= user.name %>
-            </a>
-            <ul class="dropdown-menu dropdown-menu-end">
-              <li><a class="dropdown-item" href="/profile">Profile</a></li>
-              <li><a class="dropdown-item" href="/orders">Orders</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="/logout">Logout</a></li>
-            </ul>
-          </li>
-        <% } else { %>
-          <!-- Login/signup -->
-          <li class="nav-item">
-            <a class="nav-link text-dark" href="/login">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-dark" href="/signup">Signup</a>
-          </li>
-        <% } %>
-        
-      </ul>
-    </div>
-  </div>
-</nav>
-<script>
-  // Expose login status to JS
- 
-</script>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="/">E-Commerce</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/products">Products</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/categories">Categories</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav">
+                    <% if (locals.user) { %>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/cart">
+                                Cart
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/profile">Profile</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/logout">Logout</a>
+                        </li>
+                    <% } else { %>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/login">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/register">Register</a>
+                        </li>
+                    <% } %>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header> 
